# mochi

./: .dockerignore  .gitignore  Brewfile  Card.swift  CardView2.swift  ContentView.swift  LaunchConfirmViewController.swift  LaunchOneViewController.swift  Podfile  QuestionOneViewController.swift  README.md  UpcomingViewController.swift
backend/: CREATE TABLE users (.pgsql  dbsetup.py  matching.py  old_code.py  pewe.py  pyproject.toml  server.py  server2.py  server_w_new_endpoints.py  testData.json  testinit.pgsql
backend/models/: app.py  test.py
backend/utils/: auth.py  firebase.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  nginx.conf
frontend/: App.tsx  global.tsx  mockData.tsx  package-lock.json  package.json
frontend/components/: EventCard.tsx  Loading.tsx  Welcome.tsx  index.ts
mochi.xcodeproj/font.xcworkspace/: contents.xcworkspacedata
mochi/mochi.xcodeproj/: project.pbxproj
mochiFrontend/: ExploreViewController.swift  QuestionThreeViewController.swift  RegisteredViewController.swift  ViewController.swift
mochiOnboarding/: AppDelegate.swift  CardView.swift  EventCard.swift  EventDetailsViewController.swift  ExploreViewController.swift  FridayNightViewController.swift  Info.plist  OnboardingConfirmationViewController.swift  QuestionOneViewController.swift  QuestionTwoViewController.swift  RegisteredViewController.swift  SceneDelegate.swift  UpcomingPageViewController.swift  UpcomingViewController.swift  ViewController.swift
mochiOnboarding.xcodeproj/: project.pbxproj
mochiOnboarding.xcworkspace/: contents.xcworkspacedata
(+21 files in other folders)
