[tool.poetry]
name = "mochi-backend"
version = "0.1.0"
description = "Flask backend for mochi"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"
peewee = "^3.14.8"
PyJWT = "^2.3.0"
xmltodict = "^0.12.0"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
rope = "^0.21.0"
mypy = "^0.910"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
